Finished Matching Logic, Unit Tests for Matching Logic, Edge Cases for Matching Logic, AI-Integration through HF, and Testing AI-Integration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=3000 
 DATABASE_URL="postgresql://username:password@localhost:5432/scholarship_matching_db?schema=public"
-HUGGINGFACE_token=""
+HUGGINGFACE_token="your_token"
