--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^7.2.0",
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.16.0",
     "pg": "^8.16.3",
     "zod": "^4.3.5"
   },
